--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 14px;
-}
-
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -9,10 +5,23 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    font-family: Arial, Arial, sans-serif;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
+    padding-right: 500px;
 }
 
 body {
-    margin: 0;
+    font-family: Arial, Arial, sans-serif;
+    margin-bottom: 60px;
+}
+
+table {
+    font-family: Arial, Arial, sans-serif;
+}
+
+td {
+    padding-right: 150px;
+    white-space: nowrap;
 }
