--- a/Views/Documents/Edit.cshtml
+++ b/Views/Documents/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Capstone.Models.Document
+﻿@model CapstoneProject.ViewModels.DocumentFormViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,56 +12,68 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="DocumentID" />
+            <input type="hidden" asp-for="Document.DocumentID" />
             <div class="form-group">
-                <label asp-for="DocumentTypeID" class="control-label"></label>
-                <input asp-for="DocumentTypeID" class="form-control" />
-                <span asp-validation-for="DocumentTypeID" class="text-danger"></span>
+                <label asp-for="Document.DocumentTypeID" class="control-label"></label>
+                <select asp-for="Document.DocumentTypeID"
+                        asp-items="@Model.DocumentTypes"
+                        class="form-control">
+                    <option disabled selected hidden>Select Document Type</option>
+                </select>
+                <span asp-validation-for="Document.DocumentTypeID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LlcID" class="control-label"></label>
-                <input asp-for="LlcID" class="form-control" />
-                <span asp-validation-for="LlcID" class="text-danger"></span>
+                <label asp-for="Document.LlcID" class="control-label"></label>
+                <select asp-for="Document.LlcID"
+                        asp-items="@Model.Llcs"
+                        class="form-control">
+                    <option disabled selected hidden>Select LLC</option>
+                </select>
+                <span asp-validation-for="Document.LlcID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CniPosRequestorUserID" class="control-label"></label>
-                <input asp-for="CniPosRequestorUserID" class="form-control" />
-                <span asp-validation-for="CniPosRequestorUserID" class="text-danger"></span>
+                <label asp-for="Document.CniPosRequestorUserID" class="control-label"></label>
+                <input asp-for="Document.CniPosRequestorUserID" class="form-control" />
+                <span asp-validation-for="Document.CniPosRequestorUserID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CniContractNumber" class="control-label"></label>
-                <input asp-for="CniContractNumber" class="form-control" />
-                <span asp-validation-for="CniContractNumber" class="text-danger"></span>
+                <label asp-for="Document.CniContractNumber" class="control-label"></label>
+                <input asp-for="Document.CniContractNumber" class="form-control" />
+                <span asp-validation-for="Document.CniContractNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ThirdParty" class="control-label"></label>
-                <input asp-for="ThirdParty" class="form-control" />
-                <span asp-validation-for="ThirdParty" class="text-danger"></span>
+                <label asp-for="Document.ThirdParty" class="control-label"></label>
+                <input asp-for="Document.ThirdParty" class="form-control" />
+                <span asp-validation-for="Document.ThirdParty" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VersionNumber" class="control-label"></label>
-                <input asp-for="VersionNumber" class="form-control" />
-                <span asp-validation-for="VersionNumber" class="text-danger"></span>
+                <label asp-for="Document.VersionNumber" class="control-label"></label>
+                <input asp-for="Document.VersionNumber" class="form-control" />
+                <span asp-validation-for="Document.VersionNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DocumentStatusID" class="control-label"></label>
-                <input asp-for="DocumentStatusID" class="form-control" />
-                <span asp-validation-for="DocumentStatusID" class="text-danger"></span>
+                <label asp-for="Document.DocumentStatusID" class="control-label"></label>
+                <select asp-for="Document.DocumentStatusID"
+                        asp-items="@Model.DocumentStatuses"
+                        class="form-control">
+                    <option disabled selected hidden>Select Document Status</option>
+                </select>
+                <span asp-validation-for="Document.DocumentStatusID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DraftedByUserID" class="control-label"></label>
-                <input asp-for="DraftedByUserID" class="form-control" />
-                <span asp-validation-for="DraftedByUserID" class="text-danger"></span>
+                <label asp-for="Document.DraftedByUserID" class="control-label"></label>
+                <input asp-for="Document.DraftedByUserID" class="form-control" />
+                <span asp-validation-for="Document.DraftedByUserID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateLastUpdated" class="control-label"></label>
-                <input asp-for="DateLastUpdated" class="form-control" />
-                <span asp-validation-for="DateLastUpdated" class="text-danger"></span>
+                <label asp-for="Document.DateLastUpdated" class="control-label"></label>
+                <input asp-for="Document.DateLastUpdated" class="form-control" />
+                <span asp-validation-for="Document.DateLastUpdated" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LinkToDocument" class="control-label"></label>
-                <input asp-for="LinkToDocument" class="form-control" />
-                <span asp-validation-for="LinkToDocument" class="text-danger"></span>
+                <label asp-for="Document.LinkToDocument" class="control-label"></label>
+                <input asp-for="Document.LinkToDocument" class="form-control" />
+                <span asp-validation-for="Document.LinkToDocument" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
