Removed filtering and searching on link and edit columns

--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -249,7 +249,11 @@
     <script>
         $(document).ready(function () {
             $("#document-table").DataTable({
-
+                'columnDefs': [{
+                    'targets': [9,10],
+                    'orderable': false,
+                    'searchable': false,
+                }]
             });
         });
     </script>
