Updated table style

--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -161,7 +161,7 @@
     <a asp-action="Create">Create New</a>
 </p>
 <!--Index Table-->
-<table class="table" id="document-table">
+<table class="table display" id="document-table">
     <thead>
         <tr>
             <th>
