--- a/Views/UserLlcs/Delete.cshtml
+++ b/Views/UserLlcs/Delete.cshtml
@@ -12,16 +12,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
+            @Html.DisplayNameFor(model => model.User.Email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LlcId)
+            @Html.DisplayNameFor(model => model.Llc.LlcName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LlcId)
+            @Html.DisplayFor(model => model.Llc.LlcName)
         </dd>
     </dl>
     
