--- a/Views/UserLlcs/Index.cshtml
+++ b/Views/UserLlcs/Index.cshtml
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.User.Email) // Note: Changed from .UserId to .User.Email
+                @Html.DisplayNameFor(model => model.User.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Llc.LlcName) // Note: Changed from .LlcId to .Llc.LlcName
+                @Html.DisplayNameFor(model => model.Llc.LlcName)
             </th>
             <th></th>
         </tr>
@@ -25,10 +25,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Email) // Note: Changed from .UserId to .User.Email
+                @Html.DisplayFor(modelItem => item.User.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Llc.LlcName) // Note: Changed from .LlcId to .Llc.LlcName
+                @Html.DisplayFor(modelItem => item.Llc.LlcName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.UserLlcId">Edit</a> |
