--- a/Views/UserLlcs/Edit.cshtml
+++ b/Views/UserLlcs/Edit.cshtml
@@ -14,8 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="UserLlc.UserLlcId" />
             <div class="form-group">
-                <label asp-for="UserLlc.UserId" class="control-label"></label>
-                <select asp-for="UserLlc.UserId"
+                <label asp-for="UserLlc.UserEmail" class="control-label"></label>
+                <select asp-for="UserLlc.UserEmail"
                         asp-items="@Model.Users"
                         class="form-control">
                     <option disabled selected hidden>Select User by Email</option>
