--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -39,7 +39,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.Where(x => x.DocumentStatusID == 1).OrderBy(x => x.DateLastUpdated).Take(5))
                         {
                             <tr>
                                 <td>
@@ -90,7 +90,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                            @foreach (var item in Model)
+                            @foreach (var item in Model.OrderBy(x => x.DateLastUpdated).Take(5))
                             {
                             <tr>
                                 <td>
