Changed DocumentStatusColor to an HTML color input

--- a/Views/DocumentStatus/Delete.cshtml
+++ b/Views/DocumentStatus/Delete.cshtml
@@ -20,7 +20,7 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DocumentStatusColor)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10" style="background-color:@Model.DocumentStatusColor;">
             @Html.DisplayFor(model => model.DocumentStatusColor)
         </dd>
     </dl>
