--- a/Views/DocumentStatus/Index.cshtml
+++ b/Views/DocumentStatus/Index.cshtml
@@ -27,7 +27,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DocumentStatusName)
             </td>
-            <td>
+            <td style="background-color:@item.DocumentStatusColor;">
                 @Html.DisplayFor(modelItem => item.DocumentStatusColor)
             </td>
             <td>
