--- a/Views/DocumentStatus/Edit.cshtml
+++ b/Views/DocumentStatus/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DocumentStatusColor" class="control-label"></label>
-                <input asp-for="DocumentStatusColor" class="form-control" />
+                <input type="color" asp-for="DocumentStatusColor" class="form-control" />
                 <span asp-validation-for="DocumentStatusColor" class="text-danger"></span>
             </div>
             <div class="form-group">
