--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -139,7 +139,7 @@
                 @Html.DisplayNameFor(model => model.LlcID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CniPosRequestorUser.Email)
+                @Html.DisplayNameFor(model => model.CniPosRequestorUserID)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CniContractNumber)
@@ -162,7 +162,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.LinkToDocument)
             </th>
-            <th></th>
+            <th>Tools</th>
         </tr>
     </thead>
     <tbody>
