--- a/Views/Llcs/Index.cshtml
+++ b/Views/Llcs/Index.cshtml
@@ -15,7 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.LlcName)
             </th>
-            <th></th>
+            <th>Tools</th>
         </tr>
     </thead>
     <tbody>
