--- a/Views/DocumentStatus/Index.cshtml
+++ b/Views/DocumentStatus/Index.cshtml
@@ -18,7 +18,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.DocumentStatusColor)
             </th>
-            <th></th>
+            <th>Tools</th>
         </tr>
     </thead>
     <tbody>
