--- a/Views/Documents/Delete.cshtml
+++ b/Views/Documents/Delete.cshtml
@@ -15,19 +15,19 @@
             @Html.DisplayNameFor(model => model.DocumentTypeID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DocumentTypeID)
+            @Html.DisplayFor(model => model.DocumentType.DocumentTypeName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LlcID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LlcID)
+            @Html.DisplayFor(model => model.Llc.LlcName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CniPosRequestorUserID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CniPosRequestorUserID)
+            @Html.DisplayFor(model => model.CniPosRequestorUser.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CniContractNumber)
@@ -51,7 +51,7 @@
             @Html.DisplayNameFor(model => model.DocumentStatusID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DocumentStatusID)
+            @Html.DisplayFor(model => model.DocumentStatus.DocumentStatusName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DraftedByUserID)
