Default sorted table by date ascending

--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -222,7 +222,8 @@
                     'targets': [9,10],
                     'orderable': false,
                     'searchable': false,
-                }]
+                }],
+                'order': [[8, 'asc']],
             });
         });
     </script>
