--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -3,19 +3,25 @@
 @inject UserManager<IdentityUser> UserManager
 
 <ul class="navbar-nav">
+
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li>
-        @if (User.IsInRole("Administrators"))
-        {
-            <li class="nav-item">
-                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "adminTools", new { area = "" })">
-                    <button type="submit" class="nav-link btn btn-link text-dark">Admin tools</button>
-                </form>
-            </li>
-        }
+    @if (User.IsInRole("Administrators"))
+    {
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-dark" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</a>
+            <div class="dropdown-menu" aria-labelledby="adminDropdown">
+                    <a class="dropdown-item" href="#">AspNetRoles</a>
+                    <a class="dropdown-item" href="#">AspNetUserRoles</a>
+                    <a class="dropdown-item" href="/DocumentStatus">Statuses</a>
+                    <a class="dropdown-item" href="/Llcs">LLCs</a>
+                    <a class="dropdown-item" href="/DocumentTypes">DocTypes</a>
+            </div>
+        </li>
+    }
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
