--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -17,8 +17,9 @@
                     <a class="dropdown-item" href="#">AspNetRoles</a>
                     <a class="dropdown-item" href="#">AspNetUserRoles</a>
                     <a class="dropdown-item" href="/DocumentStatus">Statuses</a>
+                    <a class="dropdown-item" href="/DocumentTypes">Doc Types</a>
+                    <a class="dropdown-item" href="/UserLlcs">User Llcs</a>
                     <a class="dropdown-item" href="/Llcs">LLCs</a>
-                    <a class="dropdown-item" href="/DocumentTypes">DocTypes</a>
             </div>
         </li>
     }
