adding pages for AspNet(User)Roles

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,8 +14,8 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-dark" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</a>
             <div class="dropdown-menu" aria-labelledby="adminDropdown">
-                    <a class="dropdown-item" href="#">AspNetRoles</a>
-                    <a class="dropdown-item" href="#">AspNetUserRoles</a>
+                    <a class="dropdown-item" href="/AspNetRoles">AspNetRoles</a>
+                    <a class="dropdown-item" href="/AspNetUserRoles">AspNetUserRoles</a>
                     <a class="dropdown-item" href="/DocumentStatus">Statuses</a>
                     <a class="dropdown-item" href="/DocumentTypes">Doc Types</a>
                     <a class="dropdown-item" href="/UserLlcs">User Llcs</a>
