--- a/Views/UserLlcs/Details.cshtml
+++ b/Views/UserLlcs/Details.cshtml
@@ -11,16 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserEmail)
+            @Html.DisplayNameFor(model => model.User.Email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserEmail)
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LlcId)
+            @Html.DisplayNameFor(model => model.Llc.LlcName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LlcId)
+            @Html.DisplayFor(model => model.Llc.LlcName)
         </dd>
     </dl>
 </div>
