--- a/Views/AspNetRoles/Create.cshtml
+++ b/Views/AspNetRoles/Create.cshtml
@@ -1,21 +1,26 @@
-﻿@model Capstone.Models.AspNetUserRoles
+﻿@model Capstone.Models.AspNetRoles
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>AspNetUserRoles</h1>
+<h1>Create</h1>
 
-<h4>AspNetUserRoles</h4>
+<h4>ASPNet Role</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LlcName" class="control-label"></label>
-                <input asp-for="LlcName" class="form-control" />
-                <span asp-validation-for="LlcName" class="text-danger"></span>
+                <label asp-for="Role" class="control-label"></label>
+                <input asp-for="Role" class="form-control" />
+                <span asp-validation-for="Role" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Permissions" class="control-label"></label>
+                <input asp-for="Permissions" class="form-control" />
+                <span asp-validation-for="Permissions" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
