--- a/Views/AspNetRoles/Delete.cshtml
+++ b/Views/AspNetRoles/Delete.cshtml
@@ -1,27 +1,10 @@
-﻿@model Capstone.Models.AspNetRoles
+﻿@using Microsoft.AspNetCore.Identity
+@model IdentityRole
 
-@{
-    ViewData["Title"] = "Delete";
-}
+<h2>Confirm deletion of role:</h2>
+<h2>@Model.Name</h2>
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ASPNet Role</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Permissions)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Role" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+<form asp-action="DeleteConfirm" asp-route-id="@Model.Id">
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
+</form>
