--- a/Views/AspNetRoles/Details.cshtml
+++ b/Views/AspNetRoles/Details.cshtml
@@ -1,24 +1,30 @@
-﻿@model Capstone.Models.AspNetRoles
+﻿@using Microsoft.AspNetCore.Identity
+@model IdentityRole
+
+@inject UserManager<IdentityUser> userManager
+@inject RoleManager<IdentityRole> roleManager
 
 @{
     ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
-
 <div>
-    <h4>ASPNet Role</h4>
+    <h4>@Model.Name</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
+        <dt class="col-sm-2">
+            @Model.Id
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Role)
+        <dd class="col-sm-10">
+            @Model.Name
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Role">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+
+
