--- a/Views/AspNetUserRoles/Index.cshtml
+++ b/Views/AspNetUserRoles/Index.cshtml
@@ -1,33 +1,40 @@
-﻿@model Capstone.Models.AspNetUserRoles
+﻿@using Microsoft.AspNetCore.Identity
+@model List<IdentityRole>
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Index";
 }
 
-<h1>AspNetUserRoles</h1>
+<h1>ASPNetUser Roles</h1>
 
-<h4>AspNetUserRoles</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="LlcName" class="control-label"></label>
-                <input asp-for="LlcName" class="form-control" />
-                <span asp-validation-for="LlcName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Id
+            </th>
+            <th>
+                Name
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var role in Model) {
+            <tr>
+                <td>
+                    @role.Id
+                </td>
+                <td>
+                    @role.Name
+                </td>
+                <td>
+                    
+                </td>
+            </tr>
+        }
+     </tbody>
+</table>
