Changed names for index pages and removed ID from Roles page

--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -9,13 +9,13 @@
 <table>
     <tbody>
         <tr> <!--Table Headers-->
-            <td><h3>nearing completion</h3></td>
-            <td><h3>potentially neglected</h3></td>
+            <td><h3>Nearing Completion</h3></td>
+            <td><h3>Potentially Neglected</h3></td>
         </tr>
         <tr>
             <td>
                 <!--'nearing completion' Table-->
-                <table class="table" id="overview-table">
+                <table class="table display" id="nearing-completion">
                     <thead>
                         <tr>
                             <th>
@@ -66,7 +66,7 @@
                 </table>
             <td>
                 <!--'potentially neglected' Table-->
-                <table class="table" id="overview-table">
+                <table class="table display" id="potentially-neglected">
                     <thead>
                         <tr>
                             <th>
@@ -123,7 +123,7 @@
 <div style="height: 50px;"></div>
 
 
-<h1>Index</h1>
+<h1>Documents</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
